[gd_scene load_steps=4 format=3 uid="uid://2ek1oh0xlqex"]

[ext_resource type="Script" uid="uid://d2q0ansljawiu" path="res://relationship_editor.gd" id="1_hm312"]
[ext_resource type="Script" uid="uid://jg4ju7wsro17" path="res://relationship_modifier_slider.gd" id="2_hm312"]
[ext_resource type="Texture2D" uid="uid://ccuf5k0s281ih" path="res://ui_icons/grey_crossWhite.png" id="3_l5xla"]

[node name="RelationshipEditor" type="HBoxContainer"]
script = ExtResource("1_hm312")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(7.985, 0)
layout_mode = 2

[node name="RelationshipOptions" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(72.61, 0)
layout_mode = 2
text_overrun_behavior = 1
item_count = 1
popup/item_0/text = "[None]"
popup/item_0/id = 0

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(80.545, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -10.0
max_value = 10.0

[node name="RelationshipModifierSlider" type="Label" parent="."]
layout_mode = 2
text = "0"
script = ExtResource("2_hm312")

[node name="delete" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("3_l5xla")

[connection signal="item_selected" from="RelationshipOptions" to="." method="_on_relationship_options_item_selected"]
[connection signal="pressed" from="RelationshipOptions" to="." method="_on_relationship_options_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
